--- a/po/bg.po
+++ b/po/bg.po
@@ -1,17 +1,18 @@
 # Bulgarian translation of gst-plugins-ugly.
-# Copyright (C) 2007, 2008, 2009 Free Software Foundation, Inc.
+# Copyright (C) 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gst-plugins-ugly package.
-# Alexander Shopov <ash@contact.bg>, 2007, 2008, 2009.
+# Alexander Shopov <ash@kambanaria.org>, 2007, 2008, 2009, 2010.
+#
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-ugly 0.10.11.2\n"
+"Project-Id-Version: gst-plugins-ugly 0.10.14.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-10-15 15:20+0100\n"
-"PO-Revision-Date: 2009-06-15 07:48+0300\n"
-"Last-Translator: Alexander Shopov <ash@contact.bg>\n"
+"POT-Creation-Date: 2011-01-07 14:34+0000\n"
+"PO-Revision-Date: 2010-11-04 14:22+0200\n"
+"Last-Translator: Alexander Shopov <ash@kambanaria.org>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
-"Language: bg\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -31,19 +32,19 @@ msgstr "DVD-то не може да бъде отворено"
 
 #, c-format
 msgid "Could not open DVD title %d"
-msgstr "Част %d от DVD-то не може да бъде отворена"
+msgstr "Заглавната част %d от DVD-то не може да бъде отворена"
 
 #, c-format
 msgid "Failed to go to chapter %d of DVD title %d"
-msgstr "Не може да се премине към раздел %d от част %d на DVD-то"
+msgstr "Не може да се премине към раздел %d от заглавната част %d на DVD-то"
 
 #, c-format
 msgid ""
 "Could not open DVD title %d. Interactive titles are not supported by this "
 "element"
 msgstr ""
-"Част %d от DVD-то не може да бъде отворена. Интерактивни части не се "
-"поддържат от този елемент"
+"Заглавната част %d от DVD-то не може да бъде отворена. Интерактивни части не "
+"се поддържат от този елемент"
 
 msgid ""
 "Could not read DVD. This may be because the DVD is encrypted and a DVD "
@@ -75,15 +76,3 @@ msgstr "Потокът не съдържа данни."
 
 msgid "Internal data stream error."
 msgstr "Вътрешна грешка в потока от данни."
-
-#~ msgid "Invalid title information on DVD."
-#~ msgstr "Неправилна заглавна информация в DVD."
-
-#~ msgid "Could not read title information for DVD."
-#~ msgstr "Заглавната информация в DVD не може да бъде прочетена."
-
-#~ msgid "Failed to open DVD device '%s'."
-#~ msgstr "Устройството за DVD — „%s“, не може да бъде отворено."
-
-#~ msgid "Failed to set PGC based seeking."
-#~ msgstr "Не може да се зададе търсене на базата на PGC."
