--- a/po/ru.po
+++ b/po/ru.po
@@ -1,20 +1,24 @@
 # Translation for gst-plugins-ugly messages to Russian
 # This file is put in the public domain.
+#
 # Артём Попов <artfwo@gmail.com>, 2009.
 # Pavel Maryanov <acid_jack@ukr.net>, 2009.
-#
+# Yuri Kozlov <yuray@komyakino.ru>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-ugly 0.10.9.3\n"
+"Project-Id-Version: gst-plugins-ugly 0.10.14.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-10-15 15:20+0100\n"
-"PO-Revision-Date: 2009-02-12 14:26+0200\n"
-"Last-Translator: Pavel Maryanov <acid_jack@ukr.net>\n"
+"POT-Creation-Date: 2011-01-07 14:34+0000\n"
+"PO-Revision-Date: 2011-01-01 14:29+0300\n"
+"Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.0\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "Could not read from CD."
 msgstr "Не удалось прочесть CD."
@@ -54,7 +58,7 @@ msgid "Could not read DVD."
 msgstr "Не удалось открыть DVD"
 
 msgid "Failed to configure LAME encoder. Check your encoding parameters."
-msgstr "Не удалось настроить кодировщик LAME. Проверьте параметры сжатия."
+msgstr "Не удалось настроить кодировщик LAME. Проверьте параметры кодирования."
 
 #, c-format
 msgid ""
@@ -64,9 +68,9 @@ msgstr ""
 "Запрошенный битрейт в %d кбит/с для свойства «%s» недопустим. Битрейт был "
 "изменён на %d кбит/с."
 
-#, fuzzy
 msgid "Failed to configure TwoLAME encoder. Check your encoding parameters."
-msgstr "Не удалось настроить кодировщик LAME. Проверьте параметры сжатия."
+msgstr ""
+"Не удалось настроить кодировщик TwoLAME. Проверьте параметры кодирования."
 
 msgid "This stream contains no data."
 msgstr "Поток не содержит данных."
