--- a/po/ca.po
+++ b/po/ca.po
@@ -1,31 +1,31 @@
-# Catalan translation for GStreamer.
-# Copyright © 2004 Free Software Foundation, Inc.
-# This file is distributed under the same licence as the gst-plugins package.
-# Jordi Mallach <jordi@sindominio.net>, 2004.
+# Catalan translation for gst-plugins-bad.
+# Copyright © 2004, 2005, 2010 Free Software Foundation, Inc.
+# This file is distributed under the same licence as the gst-plugins-bad package.
+# Jordi Mallach <jordi@sindominio.net>, 2004, 2005, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins 0.8.3\n"
+"Project-Id-Version: gst-plugins-bad 0.10.18.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-10-19 23:33+0100\n"
-"PO-Revision-Date: 2004-08-05 15:48+0200\n"
+"POT-Creation-Date: 2011-01-07 20:26+0000\n"
+"PO-Revision-Date: 2010-11-04 21:02+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n!=1;\n"
 
-#, fuzzy
 msgid "Could not read title information for DVD."
-msgstr "No s'ha pogut escriure al fitxer «%s»."
+msgstr "No s'ha pogut llegir la informació del títol del DVD."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open DVD device '%s'."
-msgstr "No s'ha pogut tancar el dispositiu de control «%s»."
+msgstr "No s'ha pogut obrir el dispositiu de DVD «%s»."
 
 msgid "Failed to set PGC based seeking."
-msgstr ""
+msgstr "No s'ha pogut establir la cerca basada en PGC."
 
 msgid ""
 "Could not read DVD. This may be because the DVD is encrypted and a DVD "
@@ -34,185 +34,37 @@ msgstr ""
 
 #, fuzzy
 msgid "Could not read DVD."
-msgstr "No s'ha pogut escriure al fitxer «%s»."
+msgstr "No s'ha pogut llegir la informació del títol del DVD."
 
-#, fuzzy
 msgid "No file name specified for writing."
-msgstr "No s'ha especificat cap nom de fitxer."
+msgstr "No s'ha especificat cap nom de fitxer per a l'escriptura."
 
 #, c-format
 msgid "Could not open file \"%s\" for writing."
-msgstr "No s'ha pogut obrir el fitxer «%s» per a l'escriptura."
+msgstr "No s'ha pogut obrir «%s» per a l'escriptura."
 
 msgid "Internal data stream error."
-msgstr ""
+msgstr "S'ha produït un error intern de flux de dades."
 
 #, c-format
 msgid "Could not write to file \"%s\"."
 msgstr "No s'ha pogut escriure al fitxer «%s»."
 
 msgid "Internal data flow error."
-msgstr ""
+msgstr "S'ha produït un error intern de flux de dades."
 
 #, c-format
 msgid "Device \"%s\" does not exist."
 msgstr "El dispositiu «%s» no existeix."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open frontend device \"%s\"."
-msgstr "No s'ha pogut tancar el dispositiu de control «%s»."
+msgstr "No s'ha pogut crear el dispositiu frontal «%s»."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get settings from frontend device \"%s\"."
-msgstr "No s'han pogut obtenir búfers suficients del dispositiu «%s»."
+msgstr "No s'ha pogut obtenir els paràmetres des del dispositiu frontal «%s»."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "No s'ha pogut obrir el fitxer «%s» per a la lectura."
-
-#, fuzzy
-#~ msgid "PCM 1"
-#~ msgstr "PCM"
-
-#, fuzzy
-#~ msgid "PCM 2"
-#~ msgstr "PCM-2"
-
-#, fuzzy
-#~ msgid "PCM 3"
-#~ msgstr "PCM"
-
-#, fuzzy
-#~ msgid "PCM 4"
-#~ msgstr "PCM"
-
-#~ msgid "Error closing file \"%s\"."
-#~ msgstr "S'ha produït un error en tancar el fitxer «%s»."
-
-#~ msgid "Could not open CD device for reading."
-#~ msgstr "No s'ha pogut obrir el dispositiu de CD per a la lectura."
-
-#~ msgid "Could not open vfs file \"%s\" for reading."
-#~ msgstr "No s'ha pogut obrir el fitxer vfs «%s» per a la lectura."
-
-#~ msgid "Could not open vfs file \"%s\" for writing: %s."
-#~ msgstr "No s'ha pogut obrir el fitxer vfs «%s» per a l'escriptura: %s."
-
-#~ msgid "No filename given"
-#~ msgstr "No s'ha donat cap nom de fitxer"
-
-#~ msgid "Could not close vfs file \"%s\"."
-#~ msgstr "No s'ha pogut tancar el fitxer vfs «%s»."
-
-#~ msgid "No or invalid input audio, AVI stream will be corrupt."
-#~ msgstr ""
-#~ "L'entrada d'àudio no existeix o és invàlida, el flux AVI serà corrupte."
-
-#~ msgid ""
-#~ "The %s element could not be found. This element is essential for "
-#~ "playback. Please install the right plug-in and verify that it works by "
-#~ "running 'gst-inspect %s'"
-#~ msgstr ""
-#~ "No s'ha pogut trobar l'element %s. Aquest element és essencial per a la "
-#~ "reproducció. Si us plau, instal·leu el connector adequat i verifiqueu que "
-#~ "funciona correctament executant «gst-inspect %s»"
-
-#~ msgid ""
-#~ "No usable colorspace element could be found.\n"
-#~ "Please install one and restart."
-#~ msgstr ""
-#~ "No s'ha trobat cap element d'espai de color utilitzable.\n"
-#~ "Si us plau, instal·leu un i reinicieu."
-
-#~ msgid "Could not open control device \"%s\" for writing."
-#~ msgstr ""
-#~ "No s'ha pogut obrir el dispositiu de control «%s» per a l'escriptura."
-
-#~ msgid "Could not configure audio device \"%s\"."
-#~ msgstr "No s'ha pogut configurar el dispositiu d'àudio «%s»."
-
-#~ msgid "Could not set audio device \"%s\" to %d Hz."
-#~ msgstr "No s'ha pogut establir el dispositiu d'àudio «%s» a %d Hz."
-
-#~ msgid "Could not close audio device \"%s\"."
-#~ msgstr "No s'ha pogut tancar el dispositiu d'àudio «%s»."
-
-#~ msgid "Could not open video device \"%s\" for writing."
-#~ msgstr "No s'ha pogut obrir el dispositiu de vídeo «%s» per a l'escriptura."
-
-#~ msgid "Could not close video device \"%s\"."
-#~ msgstr "No s'ha pogut tancar el dispositiu de vídeo «%s»."
-
-#~ msgid "Could not write to device \"%s\"."
-#~ msgstr "No s'ha pogut escriure al dispositiu «%s»."
-
-#~ msgid "OSS device \"%s\" is already in use by another program."
-#~ msgstr "El dispositiu OSS «%s» ja està en ús per un altre programa."
-
-#~ msgid "Could not access device \"%s\", check its permissions."
-#~ msgstr ""
-#~ "No s'ha pogut accedir al dispositiu «%s», comproveu els seus permisos."
-
-#~ msgid "Could not open device \"%s\" for writing."
-#~ msgstr "No s'ha pogut obrir el dispositiu «%s» per a l'escriptura."
-
-#~ msgid "Could not open device \"%s\" for reading."
-#~ msgstr "No s'ha pogut obrir el dispositiu «%s» per a la lectura."
-
-#~ msgid "Your OSS device could not be probed correctly"
-#~ msgstr "No s'ha pogut detectar el vostre dispositiu d'OSS correctament"
-
-#~ msgid "Synth"
-#~ msgstr "Sintetitzador"
-
-#~ msgid "CD"
-#~ msgstr "CD"
-
-#~ msgid "Mixer"
-#~ msgstr "Mesclador"
-
-#~ msgid "In-gain"
-#~ msgstr "Ganància-entrada"
-
-#~ msgid "Line-1"
-#~ msgstr "Línia-1"
-
-#~ msgid "Line-2"
-#~ msgstr "Línia-2"
-
-#~ msgid "Line-3"
-#~ msgstr "Línia-3"
-
-#~ msgid "Digital-2"
-#~ msgstr "Digital-2"
-
-#~ msgid "Digital-3"
-#~ msgstr "Digital-3"
-
-#~ msgid "Phone-in"
-#~ msgstr "Telèfon-entrada"
-
-#~ msgid "Phone-out"
-#~ msgstr "Telèfon-sortida"
-
-#~ msgid "Radio"
-#~ msgstr "Ràdio"
-
-#~ msgid "No device specified."
-#~ msgstr "No s'ha especificat cap dispositiu."
-
-#~ msgid "Could not open device \"%s\" for reading and writing."
-#~ msgstr ""
-#~ "No s'ha pogut obrir el dispositiu «%s» per a l'escriptura i lectura."
-
-#~ msgid "Device is not open."
-#~ msgstr "El dispositiu no està obert."
-
-#~ msgid "Device is open."
-#~ msgstr "El dispositiu està obert."
-
-#~ msgid "Device \"%s\" is not a capture device."
-#~ msgstr "El dispositiu «%s» no és un dispositiu de captura."
-
-#~ msgid "Could not get buffers from device \"%s\"."
-#~ msgstr "No s'han pogut obtenir els búfers del dispositiu «%s»."
