--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,16 +1,16 @@
 # Brazilian Portuguese translation of gst-plugins-base.
-# Copyright (C) 2008-2010 Free Software Foundation, Inc.
+# Copyright (C) 2008-2011 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gst-plugins-base package.
-# Fabrício Godoy <skarllot@gmail.com>, 2008-2010.
+# Fabrício Godoy <skarllot@gmail.com>, 2008-2011.
 #
 # PCM -> PCM
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base-0.10.29.2\n"
+"Project-Id-Version: gst-plugins-base-0.10.31.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-10-16 01:03+0100\n"
-"PO-Revision-Date: 2010-06-28 20:25-0300\n"
+"POT-Creation-Date: 2011-01-11 18:58+0000\n"
+"PO-Revision-Date: 2011-01-08 01:02-0300\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
 "Language: pt_BR\n"
@@ -292,119 +292,126 @@ msgid "MusicBrainz TRM ID"
 msgstr "ident. da trilha TRM no MusicBrainz"
 
 msgid "capturing shutter speed"
-msgstr ""
+msgstr "velocidade do obturador ao capturar"
 
 msgid "Shutter speed used when capturing an image, in seconds"
-msgstr ""
+msgstr "Velocidade do obturador usada ao capturar uma imagem, em segundos"
 
 msgid "capturing focal ratio"
-msgstr ""
+msgstr "taxa focal ao capturar"
 
 msgid "Focal ratio (f-number) used when capturing the image"
-msgstr ""
+msgstr "Taxa focal usada ao capturar a imagem, f-number"
 
 msgid "capturing focal length"
-msgstr ""
+msgstr "distância focal ao capturar"
 
 msgid "Focal length of the lens used capturing the image, in mm"
-msgstr ""
+msgstr "Distância focal das lentes usada ao capturar a imagem, em mm"
 
 msgid "capturing digital zoom ratio"
-msgstr ""
+msgstr "taxa de zoom digital ao capturar"
 
 msgid "Digital zoom ratio used when capturing an image"
-msgstr ""
+msgstr "Taxa de zoom digital usada ao capturar uma imagem"
 
 msgid "capturing iso speed"
-msgstr ""
+msgstr "velocidade ISO ao capturar"
 
 msgid "The ISO speed used when capturing an image"
-msgstr ""
+msgstr "A velocidade ISO usada ao capturar uma imagem"
 
 msgid "capturing exposure program"
-msgstr ""
+msgstr "programa de exposição ao capturar"
 
 msgid "The exposure program used when capturing an image"
-msgstr ""
+msgstr "O programa de exposição usado ao capturar uma imagem"
 
 msgid "capturing exposure mode"
-msgstr ""
+msgstr "modo de exposição ao capturar"
 
 msgid "The exposure mode used when capturing an image"
-msgstr ""
+msgstr "O modo de exposição usado ao capturar uma imagem"
 
 msgid "capturing scene capture type"
-msgstr ""
+msgstr "tipo de captura de cena ao capturar"
 
 msgid "The scene capture mode used when capturing an image"
-msgstr ""
+msgstr "O modo de captura de cena usado ao capturar uma imagem"
 
 msgid "capturing gain adjustment"
-msgstr ""
+msgstr "ajuste de ganho ao capturar"
 
 msgid "The overall gain adjustment applied on an image"
-msgstr ""
+msgstr "O ajuste de ganho geral aplicado na imagem"
 
 msgid "capturing white balance"
-msgstr ""
+msgstr "balanço de branco ao capturar"
 
 msgid "The white balance mode set when capturing an image"
-msgstr ""
+msgstr "O modo de balanço de branco definido ao capturar uma imagem"
 
 msgid "capturing contrast"
-msgstr ""
+msgstr "contraste ao capturar"
 
 msgid "The direction of contrast processing applied when capturing an image"
 msgstr ""
+"O procedimento de processamento de contraste aplicado ao capturar uma imagem"
 
 msgid "capturing saturation"
-msgstr ""
+msgstr "saturação ao capturar"
 
 msgid "The direction of saturation processing applied when capturing an image"
 msgstr ""
+"O procedimento de processamento de saturação aplicado ao capturar uma imagem"
 
 msgid "capturing sharpness"
-msgstr ""
+msgstr "nitidez ao capturar"
 
 msgid "The direction of sharpness processing applied when capturing an image"
 msgstr ""
+"O procedimento de processamento de nitidez aplicado ao capturar uma imagem"
 
 msgid "capturing flash fired"
-msgstr ""
+msgstr "disparar flash ao capturar"
 
 msgid "If the flash fired while capturing an image"
-msgstr ""
+msgstr "Define se o flash é disparado ao capturar uma imagem"
 
 msgid "capturing flash mode"
-msgstr ""
+msgstr "modo de flash ao capturar"
 
 msgid "The selected flash mode while capturing an image"
-msgstr ""
+msgstr "O modo de flash selecionado ao capturar uma imagem"
 
 msgid "capturing metering mode"
-msgstr ""
+msgstr "modo de medição de luz ao capturar"
 
 msgid ""
 "The metering mode used while determining exposure for capturing an image"
 msgstr ""
+"O modo de medição de luz usado ao determinar a exposição para captura de uma "
+"imagem"
 
 msgid "capturing source"
-msgstr ""
+msgstr "fonte ao capturar"
 
 msgid "The source or type of device used for the capture"
-msgstr ""
+msgstr "A fonte ou tipo de dispositivo usado para a captura"
 
 msgid "image horizontal ppi"
-msgstr ""
+msgstr "PPI horizontal da imagem"
 
 msgid "Media (image/video) intended horizontal pixel density in ppi"
 msgstr ""
+"Densidade de pixels horizontais desejado para a mídia (imagem/vídeo), em PPI"
 
 msgid "image vertical ppi"
-msgstr ""
+msgstr "PPI vertical da imagem"
 
 msgid "Media (image/video) intended vertical pixel density in ppi"
 msgstr ""
+"Densidade de pixels verticais desejado para a mídia (imagem/vídeo), em PPI"
 
 msgid "This CD has no audio tracks"
 msgstr "Este CD não tem trilhas de áudio"
