--- a/po/pl.po
+++ b/po/pl.po
@@ -1,13 +1,13 @@
 # Polish translation for gst-plugins-good.
 # This file is distributed under the same license as the gst-plugins-good package.
-# Jakub Bogusz <qboosh@pld-linux.org>, 2007-2010.
+# Jakub Bogusz <qboosh@pld-linux.org>, 2007-2011.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.25.3\n"
+"Project-Id-Version: gst-plugins-good 0.10.26.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2011-01-07 01:15+0000\n"
-"PO-Revision-Date: 2010-10-25 07:27+0200\n"
+"POT-Creation-Date: 2011-01-11 19:32+0000\n"
+"PO-Revision-Date: 2011-01-07 21:53+0100\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "Language: pl\n"
@@ -70,7 +70,7 @@ msgid "This file is corrupt and cannot be played."
 msgstr "Ten plik jest uszkodzony i nie może być odtworzony."
 
 msgid "Invalid atom size."
-msgstr ""
+msgstr "Błędny rozmiar atomu."
 
 msgid "This file is incomplete and cannot be played."
 msgstr "Ten plik jest niekompletny i nie może być odtworzony."
@@ -625,15 +625,15 @@ msgstr ""
 msgid "Failed to set input %d on device %s."
 msgstr "Nie udało się ustawić wejścia %d urządzenia %s."
 
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Failed to get current output on device '%s'. May be it is a radio device"
 msgstr ""
-"Nie udało się uzyskać aktualnego wejścia urządzenia '%s'. Może to radio"
+"Nie udało się uzyskać aktualnego wyjścia urządzenia '%s'. Może to radio"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to set output %d on device %s."
-msgstr "Nie udało się ustawić wejścia %d urządzenia %s."
+msgstr "Nie udało się ustawić wyjścia %d urządzenia %s."
 
 #, c-format
 msgid "Could not enqueue buffers in device '%s'."
