--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,7 +1,7 @@
 # Brazilian Portuguese translation of gst-plugins-good.
 # This file is distributed under the same license as the gst-plugins-good package.
-# Copyright (C) 2008-2010 Free Software Foundation, Inc.
-# Fabrício Godoy <skarllot@gmail.com>, 2008-2010.
+# Copyright (C) 2008-2011 Free Software Foundation, Inc.
+# Fabrício Godoy <skarllot@gmail.com>, 2008-2011.
 #
 # data flow -> fluxo de dados
 # streaming -> fluxo contínuo
@@ -9,10 +9,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.23.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.26.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2011-01-07 01:15+0000\n"
-"PO-Revision-Date: 2010-06-28 21:00-0300\n"
+"POT-Creation-Date: 2011-01-11 19:32+0000\n"
+"PO-Revision-Date: 2011-01-08 01:28-0300\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
 "Language: pt_BR\n"
@@ -41,30 +41,28 @@ msgstr "Falha ao decodificar a imagem JPEG"
 msgid "Could not connect to server"
 msgstr "Não foi possível conectar ao servidor"
 
-#, fuzzy
 msgid "Server does not support seeking."
-msgstr "Não há suporte a captura de vídeo no dispositivo \"%s\""
+msgstr "Nâo há suporte a busca pelo servidor."
 
-#, fuzzy
 msgid "Could not resolve server name."
-msgstr "Não foi possível conectar ao servidor"
+msgstr "Não foi possível resolver o nome do servidor."
 
-#, fuzzy
 msgid "Could not establish connection to server."
-msgstr "Não foi possível estabelecer uma conexão com servidor de som"
+msgstr "Não foi possível estabelecer uma conexão com servidor."
 
 msgid "Secure connection setup failed."
-msgstr ""
+msgstr "Configuração de conexão segura falhou."
 
 msgid ""
 "A network error occured, or the server closed the connection unexpectedly."
 msgstr ""
+"Um erro de rede ocorreu, ou o servidor fechou a conexão inesperadamente."
 
 msgid "Server sent bad data."
-msgstr ""
+msgstr "O servidor enviou dados ruins."
 
 msgid "No URL set."
-msgstr ""
+msgstr "Nenhum URL definido."
 
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Entrada de áudio nula ou inválida, o fluxo AVI pode estar corrompido."
@@ -79,7 +77,7 @@ msgid "This file is corrupt and cannot be played."
 msgstr "Este arquivo está corrompido e não pôde ser reproduzido."
 
 msgid "Invalid atom size."
-msgstr ""
+msgstr "Tamanho de Atom inválido."
 
 msgid "This file is incomplete and cannot be played."
 msgstr "Este arquivo está incompleto e não pôde ser reproduzido."
@@ -637,16 +635,16 @@ msgstr ""
 msgid "Failed to set input %d on device %s."
 msgstr "Falha ao definir a entrada %d no dispositivo %s."
 
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Failed to get current output on device '%s'. May be it is a radio device"
 msgstr ""
-"Falha ao obter a entrada atual no dispositivo \"%s\". Talvez seja um "
+"Falha ao obter a saída atual no dispositivo \"%s\". Talvez seja um "
 "dispositivo de rádio"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to set output %d on device %s."
-msgstr "Falha ao definir a entrada %d no dispositivo %s."
+msgstr "Falha ao definir a saída %d no dispositivo %s."
 
 #, c-format
 msgid "Could not enqueue buffers in device '%s'."
@@ -684,58 +682,3 @@ msgstr "Ainda não há suporte a mudança de resolução enquanto está executan
 
 msgid "Cannot operate without a clock"
 msgstr "Não é possível operar sem um temporizador"
-
-#~ msgid "Failed to enumerate possible video formats device '%s' can work with"
-#~ msgstr ""
-#~ "Falha ao especificar os formatos possíveis de vídeo que o dispositivo \"%s"
-#~ "\" pode funcionar"
-
-#~ msgid ""
-#~ "The buffer type is not supported, or the index is out of bounds, or no "
-#~ "buffers have been allocated yet, or the userptr or length are invalid. "
-#~ "device %s"
-#~ msgstr ""
-#~ "Não há suporte ao tipo de buffer, ou o índice está fora dos limites, ou "
-#~ "nenhum buffer foi definido ainda, ou o userptr ou tamanho são inválidos. "
-#~ "Dispositivo %s"
-
-#~ msgid ""
-#~ "Failed trying to get video frames from device '%s'. Not enough memory."
-#~ msgstr ""
-#~ "Falha ao tentar obter os quadros de vídeo do dispositivo \"%s\". Memória "
-#~ "insuficiente."
-
-#~ msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-#~ msgstr ""
-#~ "memória insuficiente para adicionar à fila um buffer de ponteiro do "
-#~ "usuário. Dispositivo %s."
-
-#~ msgid "No free buffers found in the pool at index %d."
-#~ msgstr "Nenhum buffer livre encontrado no reservatório, no índice %d."
-
-#~ msgid "Device '%s' cannot capture at %dx%d"
-#~ msgstr "O dispositivo \"%s\" não captura à %dx%d"
-
-#~ msgid "Device '%s' cannot capture in the specified format"
-#~ msgstr "O dispositivo \"%s\" não captura no formato especificado"
-
-#~ msgid "Could not get buffers from device '%s'."
-#~ msgstr "Não foi possível obter buffers do dispositivo \"%s\"."
-
-#~ msgid "Could not get enough buffers from device '%s'."
-#~ msgstr "Não foi possível obter buffers suficientes do dispositivo \"%s\"."
-
-#~ msgid "Error starting streaming capture from device '%s'."
-#~ msgstr "Erro ao iniciar um fluxo contínuo de captura do dispositivo \"%s\"."
-
-#~ msgid "Error stopping streaming capture from device '%s'."
-#~ msgstr "Erro ao parar um fluxo contínuo de captura do dispositivo \"%s\"."
-
-#~ msgid "Failed getting controls attributes on device '%s.'"
-#~ msgstr "Falha ao obter atributos de controle no dispositivo \"%s\"."
-
-#~ msgid "Could not read from CD."
-#~ msgstr "Não foi possível ler o CD."
-
-#~ msgid "Disc is not an Audio CD."
-#~ msgstr "O disco não é um CD de áudio."
