--- a/po/sv.po
+++ b/po/sv.po
@@ -1,15 +1,15 @@
 # Swedish messages for gst-plugins-good.
-# Copyright (C) 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
+# Copyright (C) 2007-2011 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gst-plugins-good package.
 # Christian Rose <menthos@menthos.com>, 2004.
-# Daniel Nylander <po@danielnylander.se>, 2007, 2008, 2009, 2010.
+# Daniel Nylander <po@danielnylander.se>, 2007, 2008, 2009, 2010, 2011.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.25.3\n"
+"Project-Id-Version: gst-plugins-good 0.10.26.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2011-01-07 01:15+0000\n"
-"PO-Revision-Date: 2010-10-26 08:50+0100\n"
+"POT-Creation-Date: 2011-01-11 19:32+0000\n"
+"PO-Revision-Date: 2011-01-09 19:36+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -71,9 +71,8 @@ msgstr "Den här filen är ogiltig och kan inte spelas upp."
 msgid "This file is corrupt and cannot be played."
 msgstr "Den här filen är skadad och kan inte spelas upp."
 
-#, fuzzy
 msgid "Invalid atom size."
-msgstr "Ogiltig cd-enhet"
+msgstr "Ogiltig atomstorlek."
 
 msgid "This file is incomplete and cannot be played."
 msgstr "Den här filen är inte fullständig och kan inte spelas upp."
@@ -634,16 +633,16 @@ msgstr ""
 msgid "Failed to set input %d on device %s."
 msgstr "Kunde inte ställa in ingång %d på enheten %s."
 
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Failed to get current output on device '%s'. May be it is a radio device"
 msgstr ""
-"Misslyckades med att få tag på aktuell ingång på enheten \"%s\". Kan vara en "
+"Misslyckades med att få tag på aktuell utgång på enheten \"%s\". Kan vara en "
 "radioenhet"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to set output %d on device %s."
-msgstr "Kunde inte ställa in ingång %d på enheten %s."
+msgstr "Misslyckades med att ställa in utgång %d på enheten %s."
 
 #, c-format
 msgid "Could not enqueue buffers in device '%s'."
