playback/player: android: Use gradle & ndk-build combo to generate the Android App
Also add a video List selector.

--- a/playback/player/android/app/src/main/res/values/strings.xml
+++ b/playback/player/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="app_name">GStreamer Play</string>
     <string name="button_play">Play</string>
     <string name="button_pause">Pause</string>
+
+    <string name="action_about">About</string>
+    <string name="sort">Sort</string>
 </resources>
